# PipelineBlackFriday-ETL-Python-SQL-dbt-DW-Analytics

./: README.md  app.py  pyproject.toml  requirements.txt  typeform.py
