[tool.poetry]
name = "pipeline etl black friday pyton sql dbt analytics"
version = "0.1.0"
description = ""
authors = ["Igor <igorwebd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
